# cborian

./: Cargo.toml  README.md
.vim/: coc-settings.json
benches/: cborian_benchmark.rs  lib.rs
benches-later/: lib.rs
src/: decoder.rs  encoder.rs  lib.rs  macros.rs  random.rs  value.rs
src/random/: mod.rs
src/serde/: error.rs  mod.rs  ser.rs
tests/: lib.rs  unit.rs
tests-later/: util.rs
tests-later/properties/: value.rs
tests/properties/: mod.rs
tests/unit_test/: mod.rs
tests/util_test/: mod.rs
