[package]
name          = "cborian"
version       = "0.9.0"
authors       = ["Toralf Wittner <tw@dtex.org>", "psox <psox(a)st8l.com>"]
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://github.com/dolysis/cborian"
documentation = "https://twittner.gitlab.io/cbor-codec/cbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]
edition       = "2018"

[lib]
name = "cborian"

[features]
random = ["quickcheck"]

[dependencies]
byteorder = ">= 0.5.0"
libc      = ">  0.1.0"

[dependencies.quickcheck]
version  = ">= 0.2.21"
optional = true

[dev-dependencies]
json-codec        = ">= 0.3"
quickcheck        = ">= 0.2.21"
quickcheck_macros = ">= 0.2.21"
rand              = ">= 0.3"
rustc-serialize   = ">= 0.3"

