[package]
name          = "cborian"
version       = "0.9.0"
authors       = ["Toralf Wittner <tw@dtex.org>", "psox <psox(a)st8l.com>"]
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://github.com/dolysis/cborian"
documentation = "https://twittner.gitlab.io/cbor-codec/cbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]
edition       = "2018"

[lib]
name = "cborian"

[dependencies]
quickcheck        = ">= 0.2.21"
quickcheck_macros = ">= 0.2.21"
byteorder = ">= 0.5.0"
libc      = ">  0.1.0"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3.3"
json-codec        = ">= 0.3"
rand              = "0.7.3"
rand_chacha = "0.2.2"
rustc-serialize   = ">= 0.3"

[[bench]]
name = "cborian_benchmark"
harness = false

